--- a/bai90.html
+++ b/bai90.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- reset css -->
+    <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style90.css" />
     <!-- embed font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -15,5 +17,26 @@
   </head>
   <body>
     <!-- header -->
+    <header class="header fixed">
+      <div class="main-content">
+        <div class="body-header">
+          <!-- logo -->
+          <img src="./img/Logo.svg" alt="Lesson" class="logo" />
+          <!-- nav -->
+          <nav class="nav">
+            <ul>
+              <li class="active"><a href="#!">Home</a></li>
+              <li><a href="#!">Courses</a></li>
+              <li><a href="#!">Pricing</a></li>
+              <li><a href="#!">Reviews</a></li>
+            </ul>
+          </nav>
+          <!-- btn action -->
+          <div class="action">
+            <a href="!#" class="btn btn-sign-up">Sign Up</a>
+          </div>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
