--- a/bai90.html
+++ b/bai90.html
@@ -19,7 +19,7 @@
     <!-- header -->
     <header class="header fixed">
       <div class="main-content">
-        <div class="body-header">
+        <div class="body">
           <!-- logo -->
           <img src="./img/Logo.svg" alt="Lesson" class="logo" />
           <!-- nav -->
@@ -38,5 +38,79 @@
         </div>
       </div>
     </header>
+    <main>
+      <div class="hero">
+        <div class="main-content">
+          <div class="body">
+            <!-- hero left -->
+            <div class="media-block">
+              <img
+                src="./img/guy.svg"
+                alt="Learn without limits and spread knowledge."
+                class="hero-left-img"
+              />
+              <div class="hero-summary">
+                <!-- item1 -->
+                <div class="item">
+                  <div class="icon">
+                    <img src="./img/icon/item1.svg" alt="" />
+                  </div>
+                  <div class="info">
+                    <div class="label">20 Courses</div>
+                    <div class="title">UI/UX Design</div>
+                  </div>
+                </div>
+                <!-- item2 -->
+                <div class="item">
+                  <div class="icon">
+                    <img src="./img/icon/item2.svg" alt="" />
+                  </div>
+                  <div class="info">
+                    <div class="label">20 Courses</div>
+                    <div class="title">Development</div>
+                  </div>
+                </div>
+                <!-- item3 -->
+                <div class="item">
+                  <div class="icon">
+                    <img src="./img/icon/item3.svg" alt="" />
+                  </div>
+                  <div class="info">
+                    <div class="label">30 Courses</div>
+                    <div class="title">Marketing</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- hero right -->
+            <div class="content-block">
+              <h1 class="heading">
+                Learn without limits and spread knowledge.
+              </h1>
+              <p class="desc">
+                Build new skills for that “this is my year” feeling with
+                courses, certificates, and degrees from world-class universities
+                and companies.
+              </p>
+
+              <div class="cta-group">
+                <a href="#!" class="btn hero-cta">See Courses</a>
+                <button class="watch-video">
+                  <div class="icon">
+                    <img src="./img/icon/watch.svg" alt="" />
+                  </div>
+                  <span>Watch Video</span>
+                </button>
+              </div>
+
+              <p class="desc desc-recent">Recent engagement</p>
+              <p class="desc stats">
+                <strong>50K</strong> Students <strong>70+</strong> Courses
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
